Added (VectorDeterrent) to VectorAvailability (appears more in line with Schema 28 xml example).
git-svn-id: https://openmalaria.googlecode.com/svn@1874 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/XmlScenario.wiki
+++ b/wiki/XmlScenario.wiki
@@ -91,7 +91,7 @@ Timed interventions correspond to mass deployment at a specific time point. The 
 || `vaccinate` || Mass vaccination campaign ||
 || `ITN` || Mass ITN-deployment ||
 || `IRS` || IRS spray round ||
-|| `VectorAvailability` || Mass mosquito-repellent deployment (e.g. house spraying) ||
+|| `VectorAvailability` (VectorDeterrent) || Mass mosquito-repellent deployment (e.g. house spraying) ||
 || `ipti` || Mass IPTi campaign ||
 || `larviciding` || Mosquito emergence-rate reduction intervention. Has an `anopheles` sub-element for each mosquito sub-species, containing the attributes: `mosquito` (name of sub-species), `effectiveness` (proportional reduction in mosquito emergence), `duration` (number of days the intervention is effective for). ||
 
