Edited wiki page ExperimentDesign through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@1881 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/ExperimentDesign.wiki
+++ b/wiki/ExperimentDesign.wiki
@@ -75,6 +75,10 @@ The `base.xml` must have the same model parameters as one of the model parameter
 
 Each sweep should consist of a directory containing one XML file for each arm; each of these files should itself be a complete and valid OpenMalaria scenario. If, for example, an experiment has two sweeps, A and B, and each sweep has two arms, A1 and A2, and B1 and B2, and the parameters of A1 and B1 are used in the `base.xml` scenario, then the description should contain directories `A` and `B`. `A` should contain `A1.xml` and `A2.xml` files, where `A1.xml` is identical to `base.xml` (except that you may wish to give it a name by changing the `name` attribute of the `scenario` element), and `A2.xml` differs from `A1.xml` only in the changed parameters of this sweep. Similarly `B` should contain `B1.xml` and `B2.xml`, each of which would use the A1 parameters of the first sweep together with the B1 or B2 parameters for the second sweep. If you wish to specify which arm is the reference rather than let the experiment creator choose any of them, rename one arm (in each sweep) to `reference.xml`. None of the arms should be named `base.xml` (see below).
 
+==== Example ====
+
+A simple example experiment description: [http://code.google.com/p/openmalaria/source/browse/download/experiments/EC-example-schema-28.7z EC-example-schema-28.7z]
+
 === Models ===
 
 The models/parameterizations are added in a similar way to sweeps. Download files for the appropriate time-step and schema version from [http://code.google.com/p/openmalaria/source/browse/#svn%2Fdownload%2Fexperiments the repository] and extract (requires [http://7-zip.org/ 7-zip]). Rename the extracted folder "models" if you like and put it in the experiment description directory. Now find out which of these models most resembles your `base.xml` file (the parameters at the end must be identical), and rename this to `base.xml` (still within the `models` directory). This last step is important: it tells the experiment creator that it shouldn't carry over all the differences between these model arm XML files and your `base.xml` file (in the above directory) — which would remove all the interventions, etc., that you added into your `base.xml` file — but, instead, only carry over the differences between the model arm (`models/R0000.xml`, etc.) and the base model (the `base.xml` file within the `models` directory).
