--- a/wiki/ExperimentDesign.wiki
+++ b/wiki/ExperimentDesign.wiki
@@ -28,23 +28,47 @@ Since OpenMalaria simulations are stochastic, we usually use a number of random 
 
 In order to facilitate the creation of a set of scenarios from an experiment description we developed a tool called "experiment creator" (at the moment it's fairly minimalist). This takes a description of sweeps and arms from a bunch of files and folders, described below.
 
+=== Installing ===
+
+==== OpenMalariaTools ====
+
+The experiment creator can be used from [openmalariaTools OpenMalariaTools].
+
+==== Stand-alone ====
+
+Alternatively, the experiment creator can be downloaded as a jar here: [http://openmalaria.googlecode.com/svn/experiment_creator/ExperimentCreator.jar]
+
+To run this, you need to install a java run-time environment (JRE) if you don't have it already — install from your package manager or from [http://www.java.com/en/download/index.jsp java.com]. Then, open up a command-line, navigate to the saved jar file, and enter:
+{{{
+java -jar ExperimentCreator.jar
+}}}
+
+=== Usage ===
+
 Running the experiment creator without any command-line arguments shows some usage instructions:
 
 {{{
-> java ExpcreatorStandalone
+> java -jar ExperimentCreator.jar
+Required arguments: --stddirs PATH
 Usage:
-        CombineSweeps [options] INPUT_DIR OUTPUT_DIR
         CombineSweeps --stddirs PATH [options]
 
 Options:
-  --stddirs PATH        Assume a standard setup: INPUT_DIR is PATH/description,
-                 OUTPUT_DIR is PATH/scenarios, and a list of what the
-                 scenarios are is written to PATH/scenarios.csv
+  --stddirs PATH        Assume a standard setup: input dir is PATH/description,
+                        output dir is PATH/scenarios, and a list of what the
+                        scenarios are is written to PATH/scenarios.csv
   --seeds N             Add a sweep of N random seeds
-  --unique-seeds        Force all seeds to be unique (overwrite)
+  --unique-seeds B      If B is true (default), give every scenario a unique seed
   --patches             Write out arms as patches instead of resulting
                         combined XML files. (Currently broken.)
   --no-validation               Turn off validation.
+  --write-list-only     Stop after writing PATH/scenarios.csv without doing DB
+                        updates or generating scenario files.
+  --read-list           Read list in PATH/scenarios.csv and only generate scenario
+                        files listed. Due to limited capability of program, a full list
+                        for the current description should be generated and unwanted
+                        lines deleted; other edits may cause problems.
+                        Comparators of all included scenarios should be included.
 
 Non-DB mode options:
   --name NAME           Name of experiment; for use when not in DB mode.
@@ -56,12 +80,18 @@ DB-mode options:
                         Enable DB mode: read and update DATABASE at address SERVER.
   --dbuser USER         Log in as USER. Password will be read from command prompt.
   --desc DESC           Enter a description for database update.
+
+PATH/description should contain one XML file named base.xml and a set of
+sub-directories. Each sub-directory containing any XML files is
+considered a sweep. Each XML file within each sweep's directory is
+considered an arm. See comment at the top of CombineSweeps.java
+for more information.
 }}}
 
 Usually I create a directory for the experiment and put the description of sweeps and arms in a sub-directory called "description"; then I can just run the experiment creator like:
 
 {{{
-java ExpcreatorStandalone --stddirs path/to/experiment --seeds 10 --name exp-name
+java -jar ExperimentCreator.jar --stddirs path/to/experiment --seeds 10 --name exp-name
 }}}
 
 (Note: we prefer not to have underscores (`_`) in the experiment name, and it must not have spaces.) The "description" sub-directory should contain:
