--- a/wiki/ExperimentDesign.wiki
+++ b/wiki/ExperimentDesign.wiki
@@ -117,7 +117,7 @@ A simple example experiment description: [http://code.google.com/p/openmalaria/s
 
 It happens that's for a sweep only one value of a xml parameter has to vary. In this case, it will me most appropriate to use TXT sweep instead of XML Sweep. This type of sweep avoids to copy/paste the xml file for each arm. The value which have to vary in the basel.xml file will be replaced by a variable name and the sweep directory will contains txt files. The variable name in the base.xml have to be defined using the following naming convention @[variable_name]@ ( e.g. @IIR@), each variable name are unique. Each TXT file in the sweep represent an arm. A TXT files contains the variable name and value for the given arms. In the file, the syntax for the declaration is : @[variable_name]@:[variable_value] ( e.g. @IIR@:7.2 ).
 
-=== Example ===
+==== Example ====
 
 In the xml, propInfected have to take differents value. A sweep infected is created with two differents arms.
 
