--- a/wiki/UnixBuildOpenMalaria.wiki
+++ b/wiki/UnixBuildOpenMalaria.wiki
@@ -2,7 +2,7 @@
 
 = Building OpenMalaria =
 
-This page gives a brief idea of how to compile OpenMalaria. We have (older) longer instructions, but I think most of the time they're not actually required. One alternate set of instructions is [LinuxCompiling here], another is unfortunately on a server which is not publically accessible.
+This page gives a brief idea of how to compile OpenMalaria.
 
 Normally we create a parent directory and put all dependencies and code there:
 {{{
@@ -10,7 +10,7 @@ cd ~
 mkdir malariacontrol
 cd malariacontrol
 }}}
-You can also create a malariacontrol/lib dir and put dependency libraries there. But I recommend you install them (make install) in which case you won't need to do this.
+You can also create a malariacontrol/lib dir and put dependency libraries there. But it is recommended that you install them (make install) in which case you won't need to do this.
 
 == Dependencies ==
 
@@ -18,6 +18,7 @@ You can also create a malariacontrol/lib dir and put dependency libraries there.
  * [UnixBuildXercesC] [http://packages.debian.org/search?keywords=libxerces-c2-dev libxerces-c2-dev]
  * xsd − Install the [http://packages.debian.org/search?keywords=xsdcxx xsdcxx] package or manually install from: http://codesynthesis.com/products/xsd/download.xhtml
  * gsl − Install the [http://packages.debian.org/search?keywords=libgsl0-dev libgsl0-dev] package or manually install... For older linux distributions, please check that you are using gsl version >= 13, otherwise you will have some failing black box tests.
+ *TODO: some boost libraries
 
 == Compiling ==
 
