Edited wiki page TableOfContents through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@1958 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -18,12 +18,13 @@
     * [OutputFiles Output formats]
     * Tools
       * [UtilsWindows Useful utilities on Windows]
-      * [UtilsRunning Running tests and scenarios]
+      * [UtilsRunScripts Scripts for running and analysing scenarios]
       * [XmlUpdateScenario Updating schema version]
       * LiveGraph
     * References
       * [XmlScenario Scenario XML]
       * [XmlMonitoring Monitoring measures]
+      * [UtilsRunning Running scenarios]
       * [Terminology]
       * [Instructions How to apply OpenMalaria to field sites]
   * *[ModelsOverview Model descriptions]*
