--- a/wiki/BuildSystem.wiki
+++ b/wiki/BuildSystem.wiki
@@ -9,17 +9,16 @@ Additionally, there's a [UnixBuildWindows summary] of how I tried (and failed) t
 
 === Running the tests ===
 CMake creates a build target which is never actually built, but "building" this target will run any integrated tests which are enabled. You can run this by:
- * _(Makefiles)_ `make test`
- * _(IDEs)_ Build the `RUN_TESTS` target.
- * _(From a command line)_ Run `ctest`. This has the advantage that you can use options like `-R` to select individual tests to run.
-Unfortunately, none of these methods give you very much information about why tests fail. So to see details of why the last test run failed, look at the `BUILD_DIR/Testing/Temporary/LastTest.log` file. Alternatively, one can bypass ctest which allows the results to be directly seen and gives a few extra options on how the test-cases are run. Example:
+ * _(Makefiles)_ Running *make test*
+ * _(IDEs)_ Building the *RUN_TESTS* target
+ * _(CTest)_ Running *ctest*
+
+CTest (part of [cmake.org CMake]) has the advantage that you can use options like `-R` to select individual tests to run and (CMake 2.8 and later) `-j2` to run 2 or more jobs in parallel.
+
+Unfortunately, none of these methods give you very much information about why tests fail. So to see details of why the last test run failed, look at the `BUILD_DIR/Testing/Temporary/LastTest.log` file, or call [UtilsRunScripts#run.py run.py] directly. Example:
 {{{
 cd build
 test/run.py 2 IPT -- --checkpoint
-}}}
-For more info, run
-{{{
-test/run.py --help
 }}}
 
 === Common configuration options ===
