--- a/wiki/UtilsRunScripts.wiki
+++ b/wiki/UtilsRunScripts.wiki
@@ -36,8 +36,56 @@ test/run.py 1 -- --checkpoint
 
 In the last case, openMalaria exits after each checkpoint is written, and run.py starts openMalaria again (until either output.txt is written or no new checkpoints appear to have been written).
 
+Various options can also be given to run.py:
+
+{{{
+  -h, --help            show this help message and exit
+  -q, --quiet           Turn off console output from this script
+  -n, --dry-run         Don't actually run openMalaria, just output the
+                        commandline.
+  -c, --dont-cleanup    Don't clean up expected files from the temparary dir
+                        (checkpoint files, schema, etc.)
+  -d, --diff            Launch a diff program (kdiff3) on the output if
+                        validation fails
+  --valid, --validate   Validate the XML file(s) using xmllint and the latest
+                        schema.
+  -g, --gdb             Run openMalaria through gdb.
+  --valgrind            Run openMalaria through valgrind (using memcheck
+                        tool).
+  --valgrind-track-origins
+                        As --valgrind, but pass --track-origins=yes option
+                        (1/2 performance).
+  --callgrind           Run openMalaria through valgrind using callgrind tool.
+  --cachegrind          Run openMalaria through valgrind using cachegrind
+                        tool.
+}}}
+
+As an example, `test/run.py Cohort -c` runs the Cohort scenario, but doesn't delete expected temporary files from the output directory so you can inspect what's there (or run openMalaria directly from there). Note that any unexpected files and output files which are different from expectation are not deleted in any case.
+
 After running scenarios, the generated output ([http://code.google.com/p/openmalaria/wiki/OutputFiles#Surveys output.txt] and [http://code.google.com/p/openmalaria/wiki/OutputFiles#Continuous_monitoring ctsout.txt]) is compared against that in [http://code.google.com/p/openmalaria/source/browse/#svn%2Ftrunk%2Ftest%2Fexpected `OMROOT/test/expected`] using the compareOutput.py and compareCtsout.py scripts in `OMROOT/util`. See below for how to interpret their output.
 
 == compareOutput.py ==
 
 Source: [http://code.google.com/p/openmalaria/source/browse/trunk/util/compareOutput.py util/compareOutput.py]
+
+This script is designed to test whether two output.txt files are identical, similar or completely different. It is used in testing, usually through `run.py`.
+
+When the output files are not identical, the script parses the output files (can take a while when they are large). It may be that although the output files are not byte-for-byte identical, the output is never-the-less exactly or to a high degree of precision equivalent. In these cases not much output is printed.
+
+When significant differences are discovered, a line is printed for each measure with significant differences, as well as a summary. The per-measure lines look like:
+
+{{{
+for measure M:  sum(1st file):X  sum(2nd file):Y  diff/sum: U  (abs diff)/sum:V
+}}}
+
+where M is the measure's numeric identifier (see table in SurveyMeasure.h or on
+wiki), X and Y are the sums of all values for this measure where a value is
+given in both files, U is the sum of signed differences between values from the
+first and second file for this measure divided by X, and V is the same accept
+that the absolute value of the differences is taken before summing.
+
+U will be positive if Y>X, negative if X>Y, zero if X=Y, assuming X!=0. If X=0
+both U and V will be nan. The absolute value of U should never be larger than
+V.
+
+If abs(U) is much less than 1 it indicates X and Y are similar: the total <placeholder>
