--- a/wiki/UtilsRunScripts.wiki
+++ b/wiki/UtilsRunScripts.wiki
@@ -6,8 +6,8 @@ We have developed a few scripts to ease running and analysing the output of indi
 
   * [UtilsRunScripts#run.py run.py]
   * [UtilsRunScripts#compareOutput.py compareOutput.py]
-  * [http://code.google.com/p/openmalaria/source/browse/trunk/util/compareCtsout.py compareCtsout.py]
-  * [http://code.google.com/p/openmalaria/source/browse/trunk/util/plotResult.py plotResult.py]
+  * [UtilsRunScripts#compareCtsout.py compareCtsout.py]
+  * [UtilsRunScripts#plotResult.py plotResult.py]
 
 The first of these is used by [http://cmake.org/ ctest] to [http://code.google.com/p/openmalaria/wiki/BuildSystem#Running_the_tests run the built-in tests].
 
@@ -88,4 +88,14 @@ U will be positive if Y>X, negative if X>Y, zero if X=Y, assuming X!=0. If X=0
 both U and V will be nan. The absolute value of U should never be larger than
 V.
 
-If abs(U) is much less than 1 it indicates X and Y are similar: the total <placeholder>
+If abs(U) is much less than 1 (say under 0.1, or 10%) it indicates X and Y are similar: the total of the measure (across age groups and time points) is similar. If V is also small it gives a stronger indication: that the values at each (age) group and time-point are similar. Of course if measuring low frequency discrete random events and 2 occur in one simulation while none occur in another, it doesn't indicate there's much difference between scenarios. Similarly if 200 random events are reported in the whole simulation but split between 100 per-group, per-time-point records, it shouldn't be surprising if V is large even if U is small and the scenarios are very similar. It is therefore not really possible to conclude that two scenarios are similar based on their outputs unless the population size is quite large.
+
+
+= compareCtsout.py =
+
+Source: [http://code.google.com/p/openmalaria/source/browse/trunk/util/compareCtsout.py util/compareCtsout.py]
+
+
+= plotResult.py =
+
+Source: [http://code.google.com/p/openmalaria/source/browse/trunk/util/plotResult.py util/plotResult.py]
