--- a/wiki/ModelInterventions.wiki
+++ b/wiki/ModelInterventions.wiki
@@ -108,16 +108,16 @@ Attributes:
 || minAge || floating-point || Minimum age (inclusive) at which humans are considered eligible in years (defaults to 0) ||
 || maxAge || floating-point || Maximum age (exclusive) at which humans are considered eligible in years (defaults to 100) ||
 || cohort || boolean || Restrict distribution to the current [Monitoring#Cohort-mode cohort] if true (defaults to false) ||
-|| cumulativeWithMaxAge || int (optional) || If supplied, the cumulative coverage deployment mode (see below) is used according to the "max intervention age" parameter given by this attribute (units: time steps). ||
+|| cumulativeWithMaxAge || int (optional) || If given, activates an optional deployment mode (see below). ||
 
 To clarify age based constraints, they are met if minAge ≤ age < maxAge.
 
 ==== Cumulative coverage deployment ====
 
-Without this option, the intervention deployment simply targets the proportion of eligible humans described by the coverage parameter. With it, the number of protected humans are first counted and unprotected humans targeted such that the total number of eligible humans reaches the proportion described by coverage.
+Without the `cumulativeWithMaxAge` option, the intervention deployment simply targets the proportion of eligible humans described by the coverage parameter. With it, the number of protected humans are first counted and unprotected humans targeted such that the total number of eligible humans reaches the proportion described by coverage.
+
+Humans are considered protected by an intervention when the last time they received this intervention was less than "max intervention age" (cumulativeWithMaxAge attribute) timesteps ago. Those considered protected retain their original intervention (bed net/vaccination/...).
+
+When the existing proportion of humans protected, _p_, is less than the desired coverage level _c_, unprotected humans have chance [http://openmalaria.googlecode.com/svn/wiki/eqns/cum_deploy_cov.png] of receiving a new instance of the intervention (net/vaccine dose/house spraying etc.). This applies across all humans eligible for coverage (those within the given age range and within the cohort if applicable).
 
 This option was added in r1595 (to be released as version 25). It is available for the vaccine, IPTi, ITN, IRS and VA interventions, and additionally cohort selection (special case where the "max intervention age" parameter doesn't do anything since humans are clearly either in the cohort or not).
-
-Humans are considered protected by an intervention when the last time they received this intervention was less than "max intervention age" (cumulativeWithMaxAge attribute) timesteps ago.
-
-Given that the existing proportion of humans protected, _p_, is less than the desired coverage level _c_, unprotected humans have chance [http://openmalaria.googlecode.com/svn/wiki/eqns/cum_deploy_cov.png] of receiving a new instance of the intervention (net/vaccine dose/house spraying etc.). This applies across all humans eligible for coverage (those within the given age range and within the cohort if applicable).
